class Matriz:
    def __init__(self, elementos: list):
        self.elementos = elementos
