@startuml Ejercicio
class Matriz {
  - elementos: list
  + __init__(elementos: list)
}

class Transpuesta {
  - matriz: Matriz
  + __init__(matriz: Matriz)
  + calcular_transpuesta(): Matriz
}

class Imprimir {
  - matriz: Matriz
  + __init__(matriz: Matriz)
  + imprimir(): void
}

class Lanzador {
  - elementos: list
  - cantidad_filas: int
  - cantidad_columnas: int
  - matriz: Matriz
  - transpuesta: Transpuesta
  - imprimir: Imprimir
  + __init__()
  + crear_matriz(): void
  + lanzar(): void
}

Matriz --|> Transpuesta
Matriz --|> Imprimir
Lanzador --> Matriz
Lanzador --> Transpuesta
Lanzador --> Imprimir
@enduml